--- a/website.yml
+++ b/website.yml
@@ -1,19 +1,4 @@
 ---
-# Copyright 2018 widdix GmbH
-#
-# Modifications Copyright 2018 Forestry.io
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
 AWSTemplateFormatVersion: '2010-09-09'
 Description: 'Static website hosting with S3 and CloudFront with a custom domain.'
 Metadata:
@@ -264,11 +249,7 @@ Resources:
               - !Sub 'arn:aws:s3:::${S3Bucket}'
               - !Sub 'arn:aws:s3:::${S3Bucket}/*'
 
-  CodeRepositorySNS:
-    Type: 'AWS::SNS::Topic'
-    Properties:
-      DisplayName: !Sub sns-${RepositoryName}
-
+  # Create a git repository for the website code
   CodeRepository:
     Type: 'AWS::CodeCommit::Repository'
     Properties:
@@ -281,6 +262,7 @@ Resources:
           Events:
             - all
 
+  # Create the build infrastructure
   CodeBuildRole:
     Type: 'AWS::IAM::Role'
     Properties:
